Just did basic Styling on the header of the web page

--- a/app/index.html
+++ b/app/index.html
@@ -10,13 +10,13 @@
 
     <header>
     <!-- Left Header -->
-      <div class="headLeft">
-        <div class="imgetsy">
+      <div class="leftSide">
+        <div class="logo">
           <img  class="etsimg" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcROOECw_UWhMA3ZPsl0WWcYc_h2ii3IvfDB2qer2h_0ti8JShtvf-8p6g">
         </div>
-        <div class="headLeftRight">
+        <div class="leftSideRight">
           <span class="headHead">
-            <input class="searchinp" type="text" placeholder="Search for items or shops"/>
+            <input class="searchInp" type="text" placeholder="Search for items or shops"/>
           </span>
           <button>Search</button>
           <a class="bro" href="">
@@ -25,15 +25,15 @@
         </div>
       </div>
     <!-- Right Header -->
-      <div class="headRight">
+      <div class="rightSide">
         <div class="regRight">
           <span class="reg">Register</span>
           <span class="signIn">Sign In</span>
         </div>
         <div class="cartDiv">
-          <span class="cartCart">Cart</span>
+          <span class="cartWords">Cart</span>
           <div class="cartpic">
-            <img class="cart" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcROOECw_UWhMA3ZPsl0WWcYc_h2ii3IvfDB2qer2h_0ti8JShtvf-8p6g">
+            <img class="cart" src="https://github.com/tiy-atl-js-sept-2015/Assignments/blob/master/Assignment-11*/assets/cart.png?raw=true">
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
         </div>
       </aside>
     </div>
-    
+
     <section>
       <div class="section">
         <ul class="imgCard"></ul>
