Debugging the bottom aside box

--- a/app/index.html
+++ b/app/index.html
@@ -39,12 +39,12 @@
       </div>
     </header>
 
-    <h3 class="grr">Show results for:</h3>
+    <h3 class="topSearch">Show results for:</h3>
 
-    <div class="smallbox">
+    <div class="smallBox">
       <aside>
       <!-- Top Aside Collection -->
-        <div class="topaside">
+        <div class="topAside">
           <h5>All Categories</h5>
           <ul class="list1">
             <li class="listOne">Home &amp; Living</li>
@@ -64,8 +64,8 @@
             <li class="listOne">Pet Supplies</li>
           </ul>
         </div>
-      <!-- Bottom Aside Collection -->
         <h4 class="refyo">Refine your search:</h4>
+      <!-- Bottom Aside Collection -->
         <div class="bottomAside">
           <h6 class="itType">Item Type</h6>
           <div class="radios">
@@ -79,22 +79,21 @@
           <div class="price">
             <h4 class="titlePrice">Price</h4>
             <input class="low" type="text" placeholder="$ Low"/>
-            <span class="tooo">to</span>
+            <span>to</span>
             <input class="high" type="text" placeholder="$ High">
-            <div class="triBox"></div>
           </div>
         </div>
       <!-- Color Filter -->
-        <div class="culluh">
-          <h4 class="culluhFilt">Filter by Color</h4>
-          <a class="colour1"  href=""><div class="colluh one"></div></a>
-          <a class="colour2"  href=""><div class="colluh two"></div></a>
-          <a class="colour3"  href=""><div class="colluh three"></div></a>
-          <a class="colour4"  href=""><div class="colluh four"></div></a>
-          <a class="colour5"  href=""><div class="colluh five"></div></a>
-          <a class="colour6"  href=""><div class="colluh six"></div></a>
-          <a class="colour7"  href=""><div class="colluh seven"></div></a>
-          <a class="colour8"  href=""><div class="colluh eight"></div></a>
+      <h4>Filter by Color</h4>
+        <div class="color">
+          <a class="color1"  href=""><div class="color-one"></div></a>
+          <a class="color2"  href=""><div class="color two"></div></a>
+          <a class="color3"  href=""><div class="color three"></div></a>
+          <a class="color4"  href=""><div class="color four"></div></a>
+          <a class="color5"  href=""><div class="color five"></div></a>
+          <a class="color6"  href=""><div class="color six"></div></a>
+          <a class="color7"  href=""><div class="color seven"></div></a>
+          <a class="color8"  href=""><div class="color eight"></div></a>
         </div>
       <!-- Order Options -->
         <div class="order">
