Debugged the Filter color section and also cleaned up HTML code

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,20 @@
         </div>
       </div>
     </header>
+    <div class="nav-menu">
+      <nav>
+        <ul>
+          <li><a href="#">Clothing & Accessories</a></li>
+          <li><a href="#">Jewelry</a></li>
+          <li><a href="#">Craft Supplies & Tools</a></li>
+          <li><a href="#">Weddings</a></li>
+          <li><a href="#">Entertainment</a></li>
+          <li><a href="#">Home & Living</a></li>
+          <li><a href="#">Kids & Baby</a></li>
+          <li><a href="#">Vintage</a></li>
+        </ul>
+      </nav>
+    </div>
 
     <h3 class="topSearch">Show results for:</h3>
 
@@ -82,60 +96,63 @@
             <span>to</span>
             <input class="high" type="text" placeholder="$ High">
           </div>
-        </div>
-      <!-- Color Filter -->
-      <h4>Filter by Color</h4>
-        <div class="color">
-          <a class="color1"  href=""><div class="color-one"></div></a>
-          <a class="color2"  href=""><div class="color two"></div></a>
-          <a class="color3"  href=""><div class="color three"></div></a>
-          <a class="color4"  href=""><div class="color four"></div></a>
-          <a class="color5"  href=""><div class="color five"></div></a>
-          <a class="color6"  href=""><div class="color six"></div></a>
-          <a class="color7"  href=""><div class="color seven"></div></a>
-          <a class="color8"  href=""><div class="color eight"></div></a>
-        </div>
-      <!-- Order Options -->
-        <div class="order">
-          <h4 class="ordering">Ordering Options</h4>
-          <input class="checkOne" type="checkbox">
-          <span class="accept">Accepts Etsy Gift Cards</span>
-          <br>
-          <input class="checkTwo" type="checkbox">
-          <span class="custom">Customizable</span>
-        </div>
-      <!-- Shipping Location -->
-        <div class="location">
-          <h4 class="shopLoc">Shop Location</h4>
-          <input type="radio">
-          <span class="anywhere">Anywhere</span>
-          <br>
-          <input type="radio">
-          <span class="usa">United States</span>
-          <br>
-          <span class="custloc">Choose a Custom Location</span>
-          <div class="shippyDip">
-            <h4 class="ship">Ship To</h4>
-              <select>
-                <option>Mozambique</option>
-                <option>Mexico City</option>
-                <option>Madrid</option>
-                <option>Vancouver</option>
-                <option>Havana</option>
-                <option>Cape Town</option>
-                <option>Paris</option>
-                <option>Milan</option>
-                <option>Tokyo</option>
-                <option>Hong Kong</option>
-                <option>Melbourne</option>
-                <option>London</option>
-                <option>Buenos Aires</option>
-              </select>
+
+        <!-- Color Filter -->
+          <section class="color-filter">
+            Filter by Color
+            <ul>
+              <li class="red"></li>
+              <li class="orange"></li>
+              <li class="yellow"></li>
+              <li class="green"></li>
+              <li class="blue"></li>
+              <li class="purple"></li>
+              <li class="black"></li>
+              <li class="white"></li>
+            </ul>
+          </section>
+
+        <!-- Order Options -->
+          <div class="order">
+            <h4 class="ordering">Ordering Options</h4>
+            <input class="checkOne" type="checkbox">
+            <span class="accept">Accepts Etsy Gift Cards</span>
+            <br>
+            <input class="checkTwo" type="checkbox">
+            <span class="custom">Customizable</span>
+          </div>
+        <!-- Shipping Location -->
+          <div class="location">
+            <h4 class="shopLoc">Shop Location</h4>
+            <input type="radio">
+            <span class="anywhere">Anywhere</span>
+            <br>
+            <input type="radio">
+            <span class="usa">United States</span>
+            <br>
+            <span class="custloc">Choose a Custom Location</span>
+            <div class="shippyDip">
+              <h4 class="ship">Ship To</h4>
+                <select>
+                  <option>Mozambique</option>
+                  <option>Mexico City</option>
+                  <option>Madrid</option>
+                  <option>Vancouver</option>
+                  <option>Havana</option>
+                  <option>Cape Town</option>
+                  <option>Paris</option>
+                  <option>Milan</option>
+                  <option>Tokyo</option>
+                  <option>Hong Kong</option>
+                  <option>Melbourne</option>
+                  <option>London</option>
+                  <option>Buenos Aires</option>
+                </select>
+            </div>
           </div>
         </div>
       </aside>
     </div>
-
     <section>
       <div class="section">
         <ul class="imgCard"></ul>
