Styling of pages are finished! Having problems rendering a search on to the page

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
 
     <div class="show-results">
       <span class="show">Show Results For:</span>
-      <span class="all-cats"><a href="https://www.etsy.com/search?q=Pokemon">All Categories</a> >"Pokemon" (33.352 Results)</span>
+      <span class="all-cats"><a href="https://www.etsy.com/search?q=Pokemon">All Categories</a> "Pokemon" (33.352 Results)</span>
       <span class="sort">Sort By: Relevancy</span>
     </div>
 
@@ -66,19 +66,19 @@
           <ul>
           <li><a href="#">Jewelry</a></li>
           <li><a href="#">Accessories</a></li>
-          <li><a href='#'>Clothing</a></li>
-          <li><a href='#'>Home & Living</a></li>
+          <li><a href="#">Clothing</a></li>
+          <li><a href="#">Home & Living</a></li>
           <li><a href="#">Art & Collectibles</a></li>
           <li><a href="#">Bags & Purses</a></li>
           <li><a href="#">Paper & Party Supplies</a></li>
-          <li><a href='#'>Bath & Beauty</a></li>
-          <li><a href='#'>Craft Supplies & Tools</a></li>
-          <li><a href='#'>Books, Movies, & Music</a></li>
-          <li><a href='#'>Toys & Games</a></li>
-          <li><a href='#'>Electronics & Accessories</a></li>
-          <li><a href='#'>Weddings</a></li>
-          <li><a href='#'>Pet Supplies</a></li>
-          <li><a href='#'>Shoes</a></li>
+          <li><a href="#">Bath & Beauty</a></li>
+          <li><a href="#">Craft Supplies & Tools</a></li>
+          <li><a href="#">Books, Movies, & Music</a></li>
+          <li><a href="#">Toys & Games</a></li>
+          <li><a href="#">Electronics & Accessories</a></li>
+          <li><a href="#">Weddings</a></li>
+          <li><a href="#">Pet Supplies</a></li>
+          <li><a href="#">Shoes</a></li>
         </ul>
       </div>
 
@@ -178,9 +178,6 @@
   </div>
 
   
- 
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/underscore/underscore.js"></script>
   <script src="js/etsy.js"></script>
   <script src="js/main.js"></script>
 </body>
